[gd_scene load_steps=15 format=3 uid="uid://cpbfnumyppfm7"]

[ext_resource type="Script" path="res://Enemies/PlasmaTrigunTurret.gd" id="1_f3274"]
[ext_resource type="PackedScene" path="res://Enemies/DeathDelay.tscn" id="2_b2r0b"]
[ext_resource type="Shader" path="res://HitFlash.gdshader" id="3_0a7qk"]
[ext_resource type="Texture2D" uid="uid://dq1utibhjvpsr" path="res://Assets/turret_base.png" id="4_g2bmg"]
[ext_resource type="Texture2D" uid="uid://menr1trsc80q" path="res://Assets/plasma_shotgun_gun.png" id="5_0om4f"]
[ext_resource type="PackedScene" uid="uid://bpktjxlghct6o" path="res://Projectile/ProjectileManager.tscn" id="6_hb6ao"]
[ext_resource type="Resource" uid="uid://r33v0q0km25v" path="res://Projectile/EnemyProjectiles/PlasmaShot.tres" id="7_fhqag"]
[ext_resource type="PackedScene" path="res://Utility/Shootable.tscn" id="8_iq04c"]
[ext_resource type="Resource" uid="uid://bi0os3gplg078" path="res://Projectile/Guns/PlasmaGun.tres" id="8_u04wr"]
[ext_resource type="PackedScene" path="res://Utility/Meleeable.tscn" id="9_nprw4"]
[ext_resource type="PackedScene" path="res://Utility/HitFlashHandler.tscn" id="10_iirp3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nn2xq"]
size = Vector2(256, 256)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cnsbk"]
resource_local_to_scene = true
shader = ExtResource("3_0a7qk")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s5go2"]
resource_local_to_scene = true
shader = ExtResource("3_0a7qk")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[node name="PlasmaTrigunTurret" type="StaticBody2D"]
script = ExtResource("1_f3274")
MachineTitle = "F3-HYDRA"

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_nn2xq")

[node name="Destruction" parent="." instance=ExtResource("2_b2r0b")]
Delay = 3.0

[node name="Firerate" type="Timer" parent="."]

[node name="FullBody" type="Node2D" parent="."]

[node name="Base" type="Sprite2D" parent="FullBody"]
material = SubResource("ShaderMaterial_cnsbk")
texture = ExtResource("4_g2bmg")

[node name="Guns" type="Sprite2D" parent="FullBody"]
material = SubResource("ShaderMaterial_s5go2")
texture = ExtResource("5_0om4f")

[node name="Cannon1" type="Marker2D" parent="FullBody/Guns"]
position = Vector2(96, -96)
rotation = -0.261799

[node name="Cannon2" type="Marker2D" parent="FullBody/Guns"]
position = Vector2(112, 0)

[node name="Cannon3" type="Marker2D" parent="FullBody/Guns"]
position = Vector2(96, 96)
rotation = 0.261799

[node name="PlasmaGun" parent="." instance=ExtResource("6_hb6ao")]
ShotData = ExtResource("7_fhqag")
GunInfo = ExtResource("8_u04wr")

[node name="Shootable" parent="." node_paths=PackedStringArray("Collider") instance=ExtResource("8_iq04c")]
CollisionType = 2
Collider = NodePath("..")

[node name="Meleeable" parent="." instance=ExtResource("9_nprw4")]

[node name="FlashHandler" parent="." instance=ExtResource("10_iirp3")]
Duration = 0.25
